fix picture too big

--- a/app/assets/stylesheets/news/news_index.css.scss
+++ b/app/assets/stylesheets/news/news_index.css.scss
@@ -197,7 +197,7 @@
       font-size: 22px;
       line-height: 28px;
       img {
-        max-width: 100%;
+        max-width: 100% !important;
       }
     }
   }
